# tictactoe

./: .gitignore  AIPlayer.cpp  AIPlayer.hpp  Board.cpp  Board.hpp  CMakeLists.txt  Player.hpp  README.md  RealPlayer.cpp  RealPlayer.hpp  ttt.cpp
apps/: CMakeLists.txt  main.cpp
include/engine/: Board.hpp
include/engine/player/: AIPlayer.hpp  Player.hpp  RealPlayer.hpp
include/gui/: GameScene.hpp  GameSceneBoard.hpp  GameSceneGameOver.hpp  GameSceneMenu.hpp  GameUI.hpp  LTexture.hpp  LTimer.hpp  SceneContext.hpp  SceneManager.hpp
src/: CMakeLists.txt
src/engine/: Board.cpp  CMakeLists.txt
src/engine/player/: AIPlayer.cpp  RealPlayer.cpp
src/gui/: CMakeLists.txt  GameScene.cpp  GameSceneBoard.cpp  GameSceneGameOver.cpp  GameSceneMenu.cpp  GameUI.cpp  LTexture.cpp  LTimer.cpp  SceneManager.cpp
